--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "type": "commonjs",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
     "uuid": "^11.1.0"
   }
