--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "@tailwindcss/vite": "^4.1.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-router": "^7.6.2",
     "tailwindcss": "^4.1.8"
   },
